--- a/bookReview/views/main.ejs
+++ b/bookReview/views/main.ejs
@@ -36,18 +36,17 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="./main.ejs">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="popularBook.html">인기도서</a></li>
-                        <li class="nav-item"><a class="nav-link" href="review.html">도서 서평</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/reviews">도서 서평</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">독서 챌린지</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="/myPage">MyPage</a></li>
                     </ul>
                     <form class="d-flex">
                             <% if(session.logined){%>
-                                <button class="btn btn-outline-dark" type="button" id="btnHomeLogout">로그아웃</button>
+                                <span class ="nav-link">환영합니다. <%=session.userId%>님</span><button class="btn btn-outline-dark" type="button" id="btnHomeLogout">로그아웃</button>
                             <%}else{%>
                                 <a href="./login.html"><button class="btn btn-outline-dark" type="button" id="btnHomeLogin">로그인</button></a>
                             <%}%>
-                        </a>
                     </form>
                 </div>
             </div>
@@ -75,7 +74,7 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="./javascripts/main.js"></script>
+        <script src="./javascripts/client_main.js"></script>
         <script src="./javascripts/client_logout.js"></script>
     </body>
 </html>
