--- a/bookReview/views/myPage.ejs
+++ b/bookReview/views/myPage.ejs
@@ -75,17 +75,24 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="main.html">도서리뷰게시판</a>
+        <a class="navbar-brand" href="/main">도서리뷰게시판</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
             class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-            <li class="nav-item"><a class="nav-link active" aria-current="page" href="main.html">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="popularBook.html">인기도서</a></li>
-            <li class="nav-item"><a class="nav-link" href="review.html">도서 서평</a></li>
+            <li class="nav-item"><a class="nav-link" href="/reviews">도서 서평</a></li>
             <li class="nav-item"><a class="nav-link" href="#!">독서챌린지</a></li>
+            <li class="nav-item"><a class="nav-link active" aria-current="page" href="/myPage">MyPage</a></li>
           </ul>
+          <form class="d-flex">
+            <% if(session.logined){%>
+                <span class ="nav-link">환영합니다. <%=session.userId%>님</span><button class="btn btn-outline-dark" type="button" id="btnHomeLogout">로그아웃</button>
+            <%}else{%>
+                <a href="./login.html"><button class="btn btn-outline-dark" type="button" id="btnHomeLogin">로그인</button></a>
+            <%}%>
+          </form>
         </div>
       </div>
     </nav>
@@ -99,32 +106,26 @@
           <thead>
             <tr>
               <th>No.</th>
+              <th>카테고리</th>
               <th>책제목</th>
               <th>작성자</th>
               <th>별점</th>
             </tr>
           </thead>
-          <tr>
-            <td>1</td>
-            <td>강아지똥</td>
-            <td>박선아</td>
-            <td>3</td>
-          </tr>
-          <tr>
-            <td>예제</td>
-            <td>예제</td>
-            <td>예제</td>
-            <td>예제</td>
-          </tr>
-          <tr>
-            <td>예제</td>
-            <td>예제</td>
-            <td>예제</td>
-            <td>예제</td>
-          </tr>
+          <tbody>
+        <% for(let i =0; i <reviews.length; i++){ %>
+            <tr>
+              <td> <%= i+1 %>  </td>
+              <td><%= reviews[i].category %></td>
+              <td><a href="/myPage/<%= reviews[i].no%>"><%= reviews[i].bookName %></a></td>
+              <td><%= reviews[i].userId %></td>
+              <td><%= reviews[i].score %></td>
+            </tr>
+        <% } %>
+          </tbody>
         </table>
   </section>
-  <section>
+  <!-- <section>
     <p>▶내가 작성한 댓글</p>
     <table>
       <thead>
@@ -154,7 +155,7 @@
         <td>예제</td>
       </tr>
     </table>
-  </section>
+  </section> -->
     <footer class="py-5 bg-dark">
       <div class="container">
         <p class="m-0 text-center text-white">Copyright &copy; Suna Website 2023</p>
@@ -164,7 +165,7 @@
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Core theme JS-->
-  <script src="./javascripts/form.js"></script>
+  <script src="./javascripts/client_myPage.js"></script>
 </body>
 
 </html>
