--- a/bookReview/views/myWrite.ejs
+++ b/bookReview/views/myWrite.ejs
@@ -80,13 +80,10 @@
       width: 20%;
       height: 204px;
       margin-right: 5px;
-      border: 1px solid black;
     }
 
-    #preview{
-      width: 100%;
-      display: inline-block;
-      height: 165px;
+    #picture_div{
+      border: 1px solid black;
     }
 
     #bookContent{
@@ -115,10 +112,10 @@
             class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-            <li class="nav-item"><a class="nav-link active" aria-current="page" href="/main">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="popularBook.html">인기도서</a></li>
             <li class="nav-item"><a class="nav-link" href="/reviews">도서 서평</a></li>
             <li class="nav-item"><a class="nav-link" href="#!">독서챌린지</a></li>
+            <li class="nav-item"><a class="nav-link active" aria-current="page" href="/main">MyPage</a></li>
           </ul>
         </div>
       </div>
@@ -127,50 +124,94 @@
   <!-- Product section-->
   <section>
     <div id="container">
-      <h1>도서 서평 - 게시글 작성</h1>
+      <h1>마이페이지 - 내가 작성한 글</h1>
       <form action="#" id="search_form">
         <div class="flex_class">
           <div id="picture_div">
-            <input onchange="readURL(this);" type="file" name="book_picture" id="book_picture">
-            <img id="preview" />
+            <input type="file" name="book_picture" id="book_picture" value="<%=reviews.picture%>">
+            
           </div>
             <table>
               <tr>
                 <th>카테고리</th>
                 <td>
                   <select class="width_height" name="category" id="category" style="width: 100%; border: 0;">
-                    <option value="소설">소설</option>
-                    <option value="경제">경제</option>
-                    <option value="인문학">인문학</option>
-                    <option value="자기개발">자기개발</option>
+                    <% if(reviews.category=="소설"){ %>
+                      <option value="소설" selected>소설</option>
+                    <% }else{%>
+                      <option value="소설">소설</option>
+                    <%}%>
+
+                    <%if(reviews.category == "경제"){%>
+                      <option value="경제" selected>경제</option>
+                    <%}else{%>
+                      <option value="경제">경제</option>
+                    <%}%>
+
+                    <%if(reviews.category == "인문학"){%>
+                      <option value="인문학" selected>인문학</option>
+                    <%}else{%>
+                      <option value="인문학">인문학</option>
+                    <%}%>
+
+                    <%if(reviews.category == "자기개발"){%>
+                      <option value="자기개발" selected>자기개발</option>
+                    <%}else{%>
+                      <option value="자기개발">자기개발</option>
+                    <%}%>
                   </select>
                 </td>
               </tr>
               <tr>
                 <th>도서명</th>
-                <td><input type="text" name="text" id="bookTitle" name ="bookTitle" style="width: 100%; border: 0;"></td>
+                <td><input value="<%=reviews.bookName%>" type="text" name="text" id="bookTitle" name ="bookTitle" style="width: 100%; border: 0;"></td>
               </tr>
               <tr>
                 <th>저자</th>
-                <td><input type="text" name="text" id="bookWriter" name="bookWriter" style="width: 100%; border: 0;"></td>
+                <td><input value="<%=reviews.writer%>" type="text" name="text" id="bookWriter" name="bookWriter" style="width: 100%; border: 0;"></td>
               </tr>
               <tr>
                 <th>별점</th>
                 <td>
                   <select class="width_height" name="bookGood" id="bookGood" style="width: 100%; border: 0;">
-                    <option value="5">★★★★★</option>
-                    <option value="4">★★★★</option>
-                    <option value="3">★★★</option>
-                    <option value="2">★★</option>
-                    <option value="1">★</option>
+                    <% if(reviews.score==5){ %>
+                      <option value="5" selected>★★★★★</option>
+                    <% }else{ %>
+                      <option value="5">★★★★★</option>
+                    <% } %>
+
+                    <% if(reviews.score==4){ %>
+                      <option value="4" selected>★★★★</option>
+                    <% }else{ %>
+                      <option value="4">★★★★</option>
+                    <% } %>
+
+                    <% if(reviews.score==3){ %>
+                      <option value="3" selected>★★★</option>
+                    <% }else{ %>
+                      <option value="3">★★★</option>
+                    <% } %>
+                    
+                    <% if(reviews.score==2){ %>
+                      <option value="2" selected>★★</option>
+                    <% }else{ %>
+                      <option value="2">★★</option>
+                    <% } %>
+
+                    <% if(reviews.score==1){ %>
+                      <option value="1" selected>★</option>
+                    <% }else{ %>
+                      <option value="1">★</option>
+                    <% } %>
                   </select>
                 </td>
               </tr>
             </table>
         </div>
-        <textarea id="bookContent" name="bookContent" cols="30" rows="10" placeholder="내용을 입력해주세요"></textarea>
-        <button class="btn btn-outline-dark flex-shrink-0" type="button" id="cancel_review">취소</button>
-        <button class="btn btn-outline-dark flex-shrink-0" type="button" id="post_review">등록</button>
+        <textarea id="bookContent" cols="30" rows="10" placeholder="내용을 입력해주세요"><%=reviews.content%></textarea>
+        <button class="btn btn-outline-dark flex-shrink-0" id="btnCancel">취소</button>
+        <button class="btn btn-outline-dark flex-shrink-0" id="btnDelete">삭제</button>
+        <button class="btn btn-outline-dark flex-shrink-0" id="btnUpdate">수정</button>
       </form>
   </section>
   <footer class="py-5 bg-dark">
@@ -182,7 +223,7 @@
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Core theme JS-->
-  <script src="./javascripts/client_reviewPost.js"></script>
+  <script src="./javascripts/client_update.js"></script>
 </body>
 
 </html>
