--- a/bookReview/views/reviewInfo.ejs
+++ b/bookReview/views/reviewInfo.ejs
@@ -106,17 +106,24 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="main.html">도서리뷰게시판</a>
+        <a class="navbar-brand" href="/main">도서리뷰게시판</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
             class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-            <li class="nav-item"><a class="nav-link active" aria-current="page" href="main.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link active" aria-current="page" href="/main">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="popularBook.html">인기도서</a></li>
-            <li class="nav-item"><a class="nav-link" href="review.html">도서 서평</a></li>
+            <li class="nav-item"><a class="nav-link" href="/reviews">도서 서평</a></li>
             <li class="nav-item"><a class="nav-link" href="#!">독서챌린지</a></li>
           </ul>
+          <form class="d-flex">
+            <% if(session.logined){%>
+                <span class ="nav-link">환영합니다. <%=session.userId%>님</span><button class="btn btn-outline-dark" type="button" id="btnHomeLogout">로그아웃</button>
+            <%}else{%>
+                <a href="./login.html"><button class="btn btn-outline-dark" type="button" id="btnHomeLogin">로그인</button></a>
+            <%}%>
+          </form>
         </div>
       </div>
     </nav>
@@ -124,42 +131,39 @@
   <!-- Product section-->
   <section>
     <div id="container">
-      <h1>마이페이지 - 내가 작성한 글</h1>
+      <h1>도서 서평</h1>
       <form action="#" id="search_form">
         <div class="flex_class">
           <div id="picture_div">
-            <input type="file" name="book_picture" id="book_picture">
+            <img src="<%=reviews.picture%>" alt="도서사진">
           </div>
             <table>
               <tr>
                 <th>카테고리</th>
                 <td>
-                  <select class="width_height" name="category" id="category" style="width: 100%; border: 0;">
-                    <option value="novel">소설</option>
-                    <option value="economy">경제</option>
-                    <option value="human">인문학</option>
-                    <option value="developement">자기개발</option>
-                  </select>
+                  <%=reviews.category%>
                 </td>
               </tr>
               <tr>
                 <th>도서명</th>
-                <td><input type="text" name="text" id="bookTitle" name ="bookTitle" style="width: 100%; border: 0;"></td>
+                <td><%=reviews.bookName%></td>
               </tr>
               <tr>
                 <th>저자</th>
-                <td><input type="text" name="text" id="bookWriter" name="bookWriter" style="width: 100%; border: 0;"></td>
+                <td><%=reviews.writer%></td>
               </tr>
               <tr>
                 <th>별점</th>
-                <td><input type="text" name="text" id="bookGood" name="bookGood" style="width: 100%; border: 0;"></td>
+                <td>
+                  <% for(let i =0; i<reviews.score ; i++){ %>
+                    <span>★</span>
+                  <% } %>
+                </td>
               </tr>
             </table>
         </div>
-        <textarea id="bookContent" cols="30" rows="10" placeholder="내용을 입력해주세요"></textarea>
-        <button class="btn btn-outline-dark flex-shrink-0">취소</button>
-        <button class="btn btn-outline-dark flex-shrink-0">삭제</button>
-        <button class="btn btn-outline-dark flex-shrink-0">수정</button>
+        <textarea id="bookContent" name="bookContent" cols="30" rows="10" readonly><%=reviews.content%></textarea>
+        <button class="btn btn-outline-dark flex-shrink-0" type="button" id="btnBack">뒤로가기</button>
       </form>
   </section>
   <footer class="py-5 bg-dark">
@@ -171,7 +175,6 @@
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Core theme JS-->
-  <script src="./javascripts/form.js"></script>
+  <script src="./javascripts/client_reviews.js"></script>
 </body>
-
 </html>
