--- a/bookReview/views/book_info.ejs
+++ b/bookReview/views/book_info.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -11,18 +11,14 @@
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="./stylesheets/index.css" rel="stylesheet" />
+        <link href="/stylesheets/form.css" rel="stylesheet" />
         <style>
-            .flex_class {
-                display: flex;
+            #book_img_div{
+                width: 600px;
+                height: 750px;
+            }
+            #book_img_div img{
                 width: 100%;
-            }
-            .div_piece{
-                width: 30%;
-            }
-            .img_size{
-                width: 450px;
-                height: 300px;
             }
         </style>
     </head>
@@ -42,39 +38,46 @@
                         <%}%>
                     </ul>
                     <form class="d-flex">
-                            <% if(session.logined){%>
-                                <span class ="nav-link">환영합니다. <%=session.userId%>님</span><button class="btn btn-outline-dark" type="button" id="btnHomeLogout">로그아웃</button>
+                        <% if(session.logined){%>
+                            <span class="nav-link">환영합니다. <%=session.userId%>님</span><button class="btn btn-outline-dark" type="button"
+                                id="btnHomeLogout">로그아웃</button>
                             <%}else{%>
                                 <a href="./login.html"><button class="btn btn-outline-dark" type="button" id="btnHomeLogin">로그인</button></a>
-                            <%}%>
+                                <%}%>
                     </form>
                 </div>
             </div>
         </nav>
-        <!-- Header-->
-        <header class="bg-dark py-5">
-            <div class="container px-4 px-lg-5 my-5">
-                <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">이달의 추천도서</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">popular book of the month</p>
-                </div>
-            </div>
-        </header>
-        <!-- Section-->
+        <!-- Product section-->
         <section class="py-5">
-            <div class="container px-4 px-lg-5 mt-5">
-                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center flex_class" id="popular_div">
+            <div class="container px-4 px-lg-5 my-5">
+                <div class="row gx-4 gx-lg-5 align-items-center">
+                    <div class="col-md-6" id="book_img_div"><img class="card-img-top mb-5 mb-md-0" src="<%-book.img%>" alt="책사진"/></div>
+                    <div class="col-md-6">
+                        <div class="small mb-1" style="color: red;">추천!</div>
+                        <h1 class="display-5 fw-bolder"><%=book.title%></h1>
+                        <div class="fs-5 mb-5">
+                            <!-- <span class="text-decoration-line-through">저자</span> -->
+                            <span><%=book.write%></span>
+                        </div>
+                        <p class="lead"><%=book.description%></p>
+                        <div class="d-flex">
+                            <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" />
+                            <button class="btn btn-outline-dark flex-shrink-0" type="button">
+                                좋아요
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Suna Website 2023</p></div>
+            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="./javascripts/client_main.js"></script>
-        <script src="./javascripts/client_logout.js"></script>
+        <!-- <script src="/javascripts/form.js"></script> -->
     </body>
 </html>
