--- a/bookReview/views/reviewInfo.ejs
+++ b/bookReview/views/reviewInfo.ejs
@@ -12,7 +12,7 @@
   <!-- Bootstrap icons-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
   <!-- Core theme CSS (includes Bootstrap)-->
-  <link href="./stylesheets/form.css" rel="stylesheet" />
+  <link href="/stylesheets/form.css" rel="stylesheet" />
   <style>
     #container {
       text-align: center;
@@ -54,11 +54,13 @@
       background-color: #e2e2e2;
     }
 
-    table th,
-    td {
+    table th,td {
       border: 1px solid gray;
       text-align: center;
       padding: 5px;
+    }
+    table th{
+      background-color: #e2e2e2;
     }
 
     #btnSearch {
@@ -84,6 +86,10 @@
 
     #picture_div{
       border: 1px solid black;
+    }
+    #picture_div img{
+      width: 100%;
+      height: 100%;
     }
 
     #bookContent{
@@ -112,10 +118,12 @@
             class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-            <li class="nav-item"><a class="nav-link active" aria-current="page" href="/main">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="popularBook.html">인기도서</a></li>
+            <li class="nav-item"><a class="nav-link" href="/reviews">Best도서</a></li>
             <li class="nav-item"><a class="nav-link" href="/reviews">도서 서평</a></li>
             <li class="nav-item"><a class="nav-link" href="#!">독서챌린지</a></li>
+            <% if(session.logined){%>
+              <li class="nav-item"><a class="nav-link active" aria-current="page" href="/myPage">MyPage</a></li>
+            <%}%>
           </ul>
           <form class="d-flex">
             <% if(session.logined){%>
@@ -163,7 +171,7 @@
             </table>
         </div>
         <textarea id="bookContent" name="bookContent" cols="30" rows="10" readonly><%=reviews.content%></textarea>
-        <button class="btn btn-outline-dark flex-shrink-0" type="button" id="btnBack">뒤로가기</button>
+        <button class="btn btn-outline-dark flex-shrink-0" type="button" id="btnBack" onclick="history.back()">뒤로가기</button>
       </form>
   </section>
   <footer class="py-5 bg-dark">
@@ -175,6 +183,6 @@
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Core theme JS-->
-  <script src="./javascripts/client_reviews.js"></script>
+  <script src="/javascripts/client_reviews.js"></script>
 </body>
 </html>
