2023-1-5 예담 중간과정

--- a/bookReview/views/main.ejs
+++ b/bookReview/views/main.ejs
@@ -74,7 +74,7 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="./javascripts/client_main.js"></script>
-        <script src="./javascripts/client_logout.js"></script>
+        <script src="/javascripts/client_main.js"></script>
+        <script src="/javascripts/client_logout.js"></script>
     </body>
 </html>
