--- a/bookReview/views/myPage.ejs
+++ b/bookReview/views/myPage.ejs
@@ -144,7 +144,8 @@
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Core theme JS-->
-  <script src="./javascripts/client_myPage.js"></script>
+  <script src="/javascripts/client_myPage.js"></script>
+  <script src="/javascripts/client_logout.js"></script>
 </body>
 
 </html>
