--- a/bookReview/views/myWrite.ejs
+++ b/bookReview/views/myWrite.ejs
@@ -247,5 +247,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Core theme JS-->
   <script src="/javascripts/client_update.js"></script>
+  <script src="/javascripts/client_logout.js"></script>
 </body>
 </html>
