--- a/bookReview/views/review.ejs
+++ b/bookReview/views/review.ejs
@@ -86,7 +86,7 @@
             <% if(session.logined){%>
                 <span class ="nav-link">환영합니다. <%=session.userId%>님</span><button class="btn btn-outline-dark" type="button" id="btnHomeLogout">로그아웃</button>
             <%}else{%>
-                <a href="./login.html"><button class="btn btn-outline-dark" type="button" id="btnHomeLogin">로그인</button></a>
+                <a href="/login.html"><button class="btn btn-outline-dark" type="button" id="btnHomeLogin">로그인</button></a>
             <%}%>
           </form>
         </div>
@@ -114,7 +114,9 @@
           <button class="btn btn-outline-dark flex-shrink-0 width_height" id="btnSearch">찾기</button>
         </li>
       </ul>
+      <% if(session.logined){%>
       <a href="reviewInput.html"><button id="btnWritePost" type="button" class="btn btn-outline-dark flex-shrink-0">게시글등록</button></a>
+      <%}%>
     </form>
   </section>
   <section>
@@ -154,6 +156,7 @@
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Core theme JS-->
-  <script src="./javascripts/client_reviews.js"></script>
+  <script src="/javascripts/client_reviews.js"></script>
+  <script src="/javascripts/client_logout.js"></script>
 </body>
 </html>
