--- a/bookReview/views/reviewInfo.ejs
+++ b/bookReview/views/reviewInfo.ejs
@@ -42,7 +42,7 @@
                             <span class="nav-link">환영합니다. <%=session.userId%>님</span><button class="btn btn-outline-dark" type="button"
                                 id="btnHomeLogout">로그아웃</button>
                             <%}else{%>
-                                <a href="./login.html"><button class="btn btn-outline-dark" type="button" id="btnHomeLogin">로그인</button></a>
+                                <a href="/login.html"><button class="btn btn-outline-dark" type="button" id="btnHomeLogin">로그인</button></a>
                                 <%}%>
                     </form>
                 </div>
@@ -83,5 +83,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="/javascripts/client_reviews.js"></script>
+        <script src="/javascripts/client_logout.js"></script>
     </body>
 </html>
