--- a/bookReview/views/reviewInfo_ver2.ejs
+++ b/bookReview/views/reviewInfo_ver2.ejs
@@ -184,5 +184,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Core theme JS-->
   <script src="/javascripts/client_reviews.js"></script>
+  <script src="./javascripts/client_logout.js"></script>
 </body>
 </html>
