--- a/bookReview/views/review.ejs
+++ b/bookReview/views/review.ejs
@@ -111,7 +111,7 @@
           <input type="text" id="search" name="search" placeholder="찾을 도서 제목을 입력하세요">
         </li>
         <li>
-          <button class="btn btn-outline-dark flex-shrink-0 width_height" id="btnSearch">찾기</button>
+          <button class="btn btn-outline-dark flex-shrink-0 width_height" type="button" id="btnSearch">찾기</button>
         </li>
       </ul>
       <% if(session.logined){%>
