--- a/bookReview/views/book_info.ejs
+++ b/bookReview/views/book_info.ejs
@@ -61,10 +61,9 @@
                             <span><%=book.write%></span>
                         </div>
                         <p class="lead"><%=book.description%></p>
-                        <div class="d-flex">
-                            <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" />
-                            <button class="btn btn-outline-dark flex-shrink-0" type="button">
-                                좋아요
+                        <div>
+                            <button class="btn btn-outline-dark" onclick="history.back()" type="button">
+                                뒤로가기
                             </button>
                         </div>
                     </div>
