--- a/bookReview/views/reviewInfo.ejs
+++ b/bookReview/views/reviewInfo.ejs
@@ -70,6 +70,9 @@
                             <button class="btn btn-outline-dark flex-shrink-0" type="button">
                                 좋아요
                             </button>
+                            <button class="btn btn-outline-dark flex-shrink-0" onclick="history.back()" style="margin-left: 10px;" type="button">
+                                뒤로가기
+                            </button>
                         </div>
                     </div>
                 </div>
